--- a/main/Kconfig
+++ b/main/Kconfig
@@ -57,3 +57,15 @@ config PIN_CURRENT
     default 0
 
 endmenu
+
+menu "Phyical Quantities"
+
+config NUM_ENCODER_SLOTS
+    int "Number of encoder slots"
+    default 20
+
+config WHEEL_RADIUS
+    int "Wheel radius (mm)"
+    default 33
+
+endmenu
