Tried different interrupt callback implementation.

--- a/components/utils/CMakeLists.txt
+++ b/components/utils/CMakeLists.txt
@@ -1,4 +1,4 @@
 idf_component_register(
-    SRCS "elapsed_timer.cpp" "sampler.cpp"
+    SRCS "elapsed_timer.cpp" "sampler.cpp" "interrupt_handler.cpp"
     INCLUDE_DIRS "."
 )
